RickAndMortyWiki v2.0, search input function added

--- a/src/app/rick-and-morty-wiki/components/nav-search/nav-search.component.html
+++ b/src/app/rick-and-morty-wiki/components/nav-search/nav-search.component.html
@@ -1,15 +1,18 @@
 <ul class="buttons-container">
   <li routerLink=""
       routerLinkActive="active"
-      [routerLinkActiveOptions]="{ exact: true }">
+      [routerLinkActiveOptions]="{ exact: true }"
+      id="navButton">
     everybody
   </li>
   <li routerLink="locations"
-      routerLinkActive="active">
+      routerLinkActive="active"
+      id="navButton">
     by location
   </li>
   <li routerLink="episodes"
-      routerLinkActive="active">
+      routerLinkActive="active"
+      id="navButton">
     by episode
   </li>
 </ul>
