--- a/src/app/rick-and-morty-wiki/components/search-input/search-input.component.html
+++ b/src/app/rick-and-morty-wiki/components/search-input/search-input.component.html
@@ -1,6 +1,9 @@
 <div class="search-input">
-  <input
-    type="text"
-    placeholder="Search character">
+  <form (ngSubmit)="searchCharacter( $event )" autocomplete="off">
+    <input type="text"
+           name="termino"
+           placeholder="Search character"
+           [(ngModel)]="termino">
+  </form>
   <img src="assets/icons/search-icon.svg" alt="icon search image">
 </div>
