--- a/src/app/rick-and-morty-wiki/components/search-input/search-input.component.scss
+++ b/src/app/rick-and-morty-wiki/components/search-input/search-input.component.scss
@@ -1,19 +1,20 @@
 @import '_shared';
 
 .search-input {
+  max-width: 750px;
   height: 46px;
   margin: 0 auto;
   margin-bottom: 24px;
   padding: 0 14px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 90% 10%;
   align-items: center;
   background-color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 
   input {
-    width: 90%;
+    width: 100%;
     font-size: 1.6rem;
     border-color: transparent;
     outline: transparent;
@@ -27,5 +28,6 @@
 
   img {
     height: 20px;
+    justify-self: end;
   }
 }
