--- a/src/app/rick-and-morty-wiki/pages/results/results.component.scss
+++ b/src/app/rick-and-morty-wiki/pages/results/results.component.scss
@@ -1,3 +1,16 @@
+.alert {
+  max-width: 600px;
+  min-height: 60px;
+  margin: 0 auto;
+  display: grid;
+  place-content: center;
+  font-size: 1.8rem;
+  color: white;
+  background-color: #161616;
+  border: 1px solid #CB3131;
+  border-radius: 5px;
+}
+
 .cards-container {
   max-width: calc(200px * 2 + 10px);
   margin: 0 auto;
