--- a/src/app/shared/card-character/card-character.component.scss
+++ b/src/app/shared/card-character/card-character.component.scss
@@ -2,6 +2,7 @@
 
 .card-character {
   width: 100%;
+  max-width: 200px;
   background-color: $bg-card-character;
   border-radius: 8px;
   overflow: hidden;
